--- a/Frontend/src/pages/auth/auth-styles.scss
+++ b/Frontend/src/pages/auth/auth-styles.scss
@@ -12,8 +12,8 @@
   background-repeat: no-repeat;
 }
 .auth-form-container {
-  height: 100%;
-  width: 100%;
+  height: 94vh;
+  width: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
