--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,4 @@
+/* author: mikias hailu and yared tsgie */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
